# theme-manager

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
defaults/: vscode.toml
defaults/applications/: Xresources.toml  vscode.toml
docs/: .readthedocs.yaml
docs/source/: conf.py  index.rst
docs/source/configuration/: applications.rst  check_procedures.rst  configuration.rst  files.rst  references.rst  scripts.rst  themes.rst
docs/source/examples/: examples.rst
docs/source/introduction/: introduction.rst
docs/source/usage/: usage.rst
packaging/: PKGBUILD
theme_manager/: envs.py
theme_manager/cli_interface/: __init__.py
theme_manager/docs/source/: conf.py
theme_manager/docs/source/configuration/: configuration.rst
theme_manager/docs/source/examples/: examples.rst
theme_manager/docs/source/introduction/: introduction.rst
theme_manager/logging_utils/: __init__.py
theme_manager/parsers/: __init__.py  cli_parser.py  theme_parser.py
theme_manager/path_utils/: __init__.py  dir_finder.py  xdg_finder.py
theme_manager/utils/: cli_parser.py  configuration_handler.py  logging_utils.py  path_handler.py  reference_interpreter.py  scripts_handler.py
